--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,13 @@
 {
-    "manifest_version": 3,
     "name": "LeetCode Playground",
-    "version": "1.0",
     "description": "Test your code snippets inline on LeetCode",
-    "icons": {
-      "128": "icon.png"
-    },
-    "content_scripts": [
-      {
-        "matches": ["https://leetcode.com/*"],
-        "js": ["content.js"],
-        "css": ["styles.css"]
-      }
-    ],
+    "version": "1.0",
+    "manifest_version": 3,
     "action": {
-      "default_popup": "popup.html",
-      "default_icon": "icon.png"
+      "default_popup": "hello.html",
+      "default_icon": "images/icon.png"
     },
-    "permissions": ["storage", "activeTab", "scripting"]
+    "permissions": [
+    "sidePanel"
+  ]
   }
