--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,9 @@
       "default_popup": "hello.html",
       "default_icon": "images/icon.png"
     },
+    "side_panel": {
+      "default_path": "sidepanel.html"
+    },
     "permissions": [
     "sidePanel"
   ]
