--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,34 @@
 {
-    "name": "Ai console error fix",
-    "description": "Reads your console and suggests solution, provides solution to stackoverflow",
-    "version": "1.0",
-    "manifest_version": 3,
-    "action": {
-      "default_popup": "hello.html",
-      "default_icon": "images/icon.png"
-    },
-    "side_panel": {
-      "default_path": "sidepanel.html"
-    },
-    "permissions": [
-    "sidePanel"
+  "manifest_version": 3,
+  "name": "AI Debugger",
+  "version": "1.0",
+  "description": "AI-powered console debugger with real-time fixes",
+  "icons": {
+    "16": "icons/icon-16.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
+  },
+  "permissions": [
+    "activeTab",
+    "storage",
+    "scripting"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "devtools_page": "devtools.html",
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": "icons/icon-48.png"
+  },
+  "host_permissions": [
+    "https://api.openai.com/*",
+    "https://stackoverflow.com/*"
   ]
-  }
+}
